<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2D2D2D"
    android:padding="20dp">

    <TextView
        android:id="@+id/tl_app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="161dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tl_authorization_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="53dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/authorization_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tl_app_name" />


    <LinearLayout
        android:id="@+id/lt_auth_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tl_forgot_password"

        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_authorize"
            style="@style/ButtonGrey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_authorize" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_register"
            style="@style/ButtonDarkGreyWithBorders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/btn_register" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lt_auth_inputs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tl_authorization_title"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_auth_email"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="39dp"
            android:hint="@string/hnt_auth_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tl_authorization_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/te_auth_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_auth_password"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="39dp"
            android:hint="@string/hnt_auth_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tl_auth_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/te_auth_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tl_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="21dp"
        android:text="@string/forgot_password"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:fontFamily="@font/roboto_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lt_auth_inputs"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>



