<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_grey"
    android:padding="20dp">

    <TextView
        android:id="@+id/tl_app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="161dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tl_registration_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="53dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/registration_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tl_app_name" />

    <LinearLayout
        android:id="@+id/lt_reg_inputs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tl_registration_title"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_reg_email"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="39dp"
            android:hint="@string/hnt_reg_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tl_registration_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/te_reg_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_reg_username"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="39dp"
            android:hint="@string/hnt_reg_username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tl_reg_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/te_reg_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_reg_drop_down_role"
            style="@style/DropDownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="39dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tl_reg_username"
            app:endIconTint="@color/white"
            android:hint="@string/reg_drop_down_default">

            <AutoCompleteTextView
                android:id="@+id/ac_reg_role"
                style="@style/DropDownElement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                tools:ignore="LabelFor"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lt_reg_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lt_reg_inputs"

        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_reg_continue"
            style="@style/ButtonGrey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="47dp"
            android:text="@string/str_continue" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>