<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/CardStyle"
    app:cardElevation="5dp"
    android:elevation="5dp"
    android:padding="5dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:elevation="0dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="12dp"
            android:text="@string/str_default_model"
            app:layout_constraintTop_toBottomOf="@+id/sv_scroll_subscriptions"
            style="@style/CardModelTitle"/>

        <TextView
            android:id="@+id/tv_stuff_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_default_stuff_type"
            android:layout_marginStart="12dp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tv_model_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_default_model_id"
            android:layout_marginStart="12dp"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/ll_suppliers_and_prices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:elevation="0dp">

            <LinearLayout
                android:id="@+id/ll_card_flags"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:layout_weight="2"
                android:elevation="0dp">
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_card_prices"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:layout_weight="30"
                android:elevation="0dp">

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_card_dashes"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:layout_weight="5"
                android:elevation="0dp">

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_card_suppliers"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:layout_weight="30"
                android:elevation="0dp">

            </LinearLayout>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_subscribe_product"
            style="@style/ButtonGrey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/follow_the_product" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>